k8s/eva-frontend-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eva-frontend-web-deployment
  labels:
    app: eva-frontend-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: eva-frontend-web
  template:
    metadata:
      labels:
        app: eva-frontend-web
    spec:
      containers:
      - name: eva-frontend-web
        image: nexus.encadeado.com:5005/eva/frontend-web:latest
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: regcred
