k8s/eva-frontend-web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eva-frontend-web
  name: eva-frontend-web-svc
spec:
  ports:
  - nodePort: 32645
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: eva-frontend-web
  type: LoadBalancer
