k8s/eva-frontend-web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eva-frontend-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: eva.encadeado.com
    http:
      paths:
      - path: /*
        backend:
          serviceName: eva-frontend-web-svc
          servicePort: 80
